StickySessionApi/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stickysessionapi
  labels:
    app: stickysessionapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stickysessionapi
  template:
    metadata:
      labels:
        app: stickysessionapi
    spec:
      containers:
        - name: stickysessionapi
          image: sticky_session_api:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
