StickySessionApi/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stickysessionapi
spec:
  selector:
    app: stickysessionapi
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
