StickySessionApi/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stickysessionapi
spec:
  ingressClassName: nginx
  rules:
    - host: sticky.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stickysessionapi
                port:
                  number: 80
